scss/style.scss
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");

body.day {
  background-color: #fff234;
  background-image: radial-gradient(#ff8000 2px, #fff234 2px);
  background-size: 80px 80px;

}

body.night {
  background-color: #00ffe7;
  background-image: radial-gradient(#005ffd 2px, #00ffe7 2px);
  background-size: 80px 80px;
}

body {
  height: 100vh;
  font-family: "Inter", sans-serif;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 20px;
  display: flex;
  justify-content: center;
  gap: 5rem;

}

.left-content{
  max-width: 425px;
}

form {
  display: flex;
  align-items: center;
  gap: 1rem;

  img {
    width: 20px;
  }

  input {
    height: 30px;
    padding-left: 20px;
    padding-right: 10px;
    border-radius: 100vw;
    border: none;
    background-color: rgb(255, 255, 255);
    color: black;
    width: min(90%, 500px);
  }
}

.location-text {
  margin-bottom: -10px;
  margin-top: 4rem;
  align-self: flex-start;
}

.date-text{
  align-self: flex-start;
}

.hero {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 40px;

  img {
    width: 100px;
  }
}

.condition-text {
  margin-top: -20px;
  font-size: 20px;
}

sup {
  font-size: 18px;
}

.card-container{
  margin-top: 30px;
}

.card{
  display: grid;
  background-color: rgba(255, 255, 255, 0.938);
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 20px;
  padding-left: 10px;
  padding-right: 20px;

  img {
    width: 40px;
  }

  span {
    text-align: end;
  }
}

.card-container > div {
  grid-template-columns: 1fr 5fr 2fr;
  align-items: center;
  gap: 10px;
}

.right-content{
  display: none;
}

.right-content > .card {
  grid-template-columns: 1fr 1fr;
  align-items: center;
  width: 300px;
  padding-left: 20px;

  sup{
    font-size: 14px;
  }
}

h1, h2{
  color: black;
  text-shadow: 2px -1px  #FFF;
}

.extra-info{
  display: flex;
  justify-content: center;
  gap: 20px;

  .card{
    display: flex;
    flex-direction: column;
    gap: 25px;
    align-items: center;
    width: 130px;
    height: 170px;

    span{
      font-size: 30px;
    }
  }

}

footer{
  position: absolute;
  bottom: 10px;
  font-size: 14px;
}

@media only screen and (min-width: 700px) {
  .right-content{
    display: block;
  }
}

